--- a/3-dinamic-dom/index.html
+++ b/3-dinamic-dom/index.html
@@ -17,6 +17,7 @@
                 <option value="#FFDB58">Mostaza</option>
             </select>
             <button id = "btnCrear">Crear</button>
+            <button id = "btnBorrar">Borrar</button>
         </div>
     </header>
     <main id="main">
