--- a/4-lista-de-tareas/index.html
+++ b/4-lista-de-tareas/index.html
@@ -1,1 +1,23 @@
-x
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de tareas</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<section class="contenedor">
+    <div class="Lista-de-Tareas">
+            <h1>Lista de tareas</h1>
+            <input type="text" id="tarea">
+            <button id="agregar">Agregar</button>
+    
+            <ul id="listado">
+            </ul>
+            <button id="borrar-tareas">Borrar Tareas</button>
+    </div>
+</section>
+<body>
+    <script src = "app.js"></script>
+</body>
+</html>
