--- a/8-fetch-api/index.html
+++ b/8-fetch-api/index.html
@@ -10,7 +10,7 @@
         <form id="buscador">
             <input type="text" id="textobusqueda">
             <select id="listaStatus">
-                <option value="all">All🥱</option>
+                <option value="all">Todos🥱</option>
                 <option value="Alive">Alive🟢</option>
                 <option value="Dead">Dead🔴</option>
                 <option value="unknown">Unknown ⚪</option>
