--- a/10-fortis-app/vistas/modulo6.html
+++ b/10-fortis-app/vistas/modulo6.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <a href="#">Nosotros</a>
-            <a href="./vistas/ingreso.html" class="Ingresar">Ingresar
+            <a href="../vistas/ingreso.html" class="Ingresar">Ingresar
                 <i class="fas fa-sign-in-alt"></i>
             </a>
         </nav>
